--- a/lab-1/src/app/globals.css
+++ b/lab-1/src/app/globals.css
@@ -20,6 +20,8 @@ body {
   color: rgb(var(--foreground-rgb));
   background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%);
   font-family: Arial, sans-serif;
+  width: 100%;
+  height: 100vh;
 }
 
 @layer utilities {
@@ -44,6 +46,8 @@ body {
 
 .navbar {
   width: 100%;
+  margin-bottom: 5vh;
+  padding: 10px;
 }
 
 .navbar ul {
@@ -55,3 +59,10 @@ body {
 .navbar ul li {
   margin-right: 16px;
 }
+
+.title {
+  font-size: large;
+  font-weight: bold;
+  text-align: center;
+}
+
