--- a/lab-1/src/app/globals.css
+++ b/lab-1/src/app/globals.css
@@ -66,3 +66,9 @@ body {
   text-align: center;
 }
 
+.spinner {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
