--- a/lab-1/src/app/styles/_variables.scss
+++ b/lab-1/src/app/styles/_variables.scss
@@ -1,5 +1,8 @@
 // _variables.scss
 
-$primary-color: #007bff;
-$secondary-color: #6c757d;
-$font-family: 'Arial', sans-serif;
+$primary-color: #8CABBE;
+$secondary-color: #BBA0B2;
+$font-family: Arial, sans-serif;
+$font-weight: bold;
+$font-size: 16px;
+$line-height: 1.5
