--- a/lab-1/src/app/globals.scss
+++ b/lab-1/src/app/globals.scss
@@ -23,7 +23,6 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%);
   font-family: Arial, sans-serif;
   width: 100%;
   height: 100vh;
@@ -36,7 +35,11 @@ body {
 }
 
 .active {
-  color: orange;
+  border: 1px solid;
+  padding: 10px;
+  background: orange;
+  color: white;
+  border-radius: 15px;
 }
 
 .post {
@@ -65,7 +68,7 @@ body {
   margin-right: 16px;
 }
 
-.title {
+.sub-title {
   font-size: large;
   font-weight: bold;
   text-align: center;
@@ -76,4 +79,12 @@ body {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+}
+
+.btn {
+  @include button-styles
+}
+
+.title {
+  @include center-element
 }
