--- a/lab-1/src/app/styles/_mixins.scss
+++ b/lab-1/src/app/styles/_mixins.scss
@@ -11,13 +11,14 @@
   display: inline-block;
   padding: 10px 20px;
   font-size: 16px;
-  background-color: $primary-color;
+  background-color: $secondary-color;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  margin-left: 10px;
 
   &:hover {
-    background-color: darken($primary-color, 10%);
+    background-color: darken($primary-color, 50%);
   }
 }
